# template-cmake-raylib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  PreLoad.cmake  README.md
cmake/: CopyFolders.cmake  Options.cmake  SymLinks.cmake
search/: BUG.code-search  FIXME.code-search  TODO.code-search
src/: app_constants.hpp  app_defines.hpp  app_includes.hpp  application.cpp  application.hpp  base_app.cpp  base_app.hpp  base_core.cpp  base_core.hpp  main.cpp
